# lemma

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  mkdocs.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  card_proposal.md  feature_request.md
.github/workflows/: cards.yml  ci.yml  docs.yml
cards/: LICENSE  README.md
cards/biology/enzyme-kinetics/: michaelis-menten.json
cards/biology/population-dynamics/: lotka-volterra-predator-prey.json
cards/biology/population-genetics/: hardy-weinberg-equilibrium.json
cards/chemistry/acid-base/: henderson-hasselbalch.json
cards/chemistry/electrochemistry/: nernst-equation.json
cards/chemistry/kinetics/: arrhenius-rate-law.json
cards/chemistry/stoichiometry/: stoichiometry-mass-balance.json
cards/chemistry/thermodynamics/: ideal-gas-law.json
cards/climate/radiative/: stefan-boltzmann.json
cards/climate/radiative-forcing/: co2-greenhouse-forcing.json
cards/engineering/fluid-dynamics/: reynolds-number-similarity.json
cards/engineering/solid-mechanics/: hookes-law-stress-strain.json
cards/hypotheses/: free-fall-with-linear-drag.json  lotka-volterra-with-logistic-prey.json
cards/mathematics/analysis/: cauchy-schwarz-inequality.json  mean-value-theorem.json  triangle-inequality.json
cards/numerical-methods/ode/: runge-kutta-4.json
cards/numerical-methods/pde/: cfl-stability-condition.json  finite-difference-truncation-error.json
cards/ops/: singularity-scientific-container.json  slurm-marenostrum5-gpp-compute.json  snakemake-dft-workflow.json
cards/physics/classical-mechanics/: conservation-of-momentum.json  free-fall-uniform-gravity.json  simple-harmonic-oscillator.json
cards/physics/condensed-matter/: bloch-theorem.json  density-of-states.json  joint-dos.json  lda-exchange-correlation.json  lindhard-susceptibility.json
cards/physics/electromagnetism/: coulombs-law-point-charges.json  faraday-law-induction.json  gauss-law-electricity.json
cards/physics/thermodynamics/: boltzmann-entropy.json  (+1 more)
docs/: README.md  architecture.md  contributing-cards.md  getting-started.md  index.md  mcp-server.md  requirements.txt  sdk-py.md  what-is-a-card.md
docs/api/: python.md  schema.md
docs/stylesheets/: extra.css
eval/humaneval-sci/: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
examples/: README.md  browse_cards.py  derive_dimensions.py  usce_check.py  use_mcp_tools.py  validate_card.py  verify_hypothesis.py  verify_llm_output.py
mcp-server/: .env.example  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
mcp-server/scripts/: bundle-cards.mjs
mcp-server/src/: engine.ts  index.ts  workspace.ts
mcp-server/test/: dimensional.test.ts  seed.test.ts  tools.test.ts  usce.test.ts
paper/: paper.bib  paper.md
schema/: LICENSE  card.v0.1.json
sdk-py/: README.md  hatch_build.py  pyproject.toml
sdk-py/artano_lemma/: __init__.py  cards.py  cli.py  client.py  dimensional.py  engine.py  server.py  tools.py  types.py  validator.py  version.py
sdk-py/tests/: test_cards.py  test_derive_dims.py  test_dimensional.py  test_engine.py  test_mcp_roundtrip.py  test_metadata.py  test_tools.py  test_usce.py
(+46 files in other folders)
