[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "artano-lemma"
version = "0.1.0a0"
description = "Lemma — open verification substrate for AI-generated scientific code. Python SDK and cross-check engine."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
  { name = "Arsalan Akhtar" },
]
keywords = ["llm", "scientific-computing", "verification", "mcp", "lemma"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
lemma = "artano_lemma.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["artano_lemma"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
strict = true
python_version = "3.10"
