[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "artano-lemma"
version = "0.1.0a0"
description = "Lemma — open verification substrate for AI-generated scientific code. Python SDK and cross-check engine."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
  { name = "Arsalan Akhtar" },
]
keywords = ["llm", "scientific-computing", "verification", "mcp", "lemma"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  "jsonschema>=4.21",
  "typer>=0.12",
  "rich>=13.7",
  "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
lemma = "artano_lemma.cli:main"
lemma-mcp = "artano_lemma.server:main"

[project.urls]
Homepage = "https://openlemma.dev"
Documentation = "https://docs.openlemma.dev"
Repository = "https://github.com/artano-ai/lemma"

[tool.hatch.build.targets.wheel]
packages = ["artano_lemma"]

# Bundle the cards corpus (CC-BY 4.0) and the schema (MIT) into the package so a
# `pip install artano-lemma` is self-contained. A build hook copies them from
# the repo into artano_lemma/_corpus and _schema (resolved by cards.py at
# runtime); `artifacts` forces their inclusion even though they're git-ignored.
[tool.hatch.build]
artifacts = [
  "artano_lemma/_corpus/**/*",
  "artano_lemma/_schema/**/*",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
strict = true
python_version = "3.10"
